# provisioning-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml-old  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Dockerfile  NOTES.md  README.md  TODO-appcenter-release.md  dispatcher-dropped-messages-investigation.md  docker-compose.yaml  dood-capabilities.sh  e2e-runner-benchmark.md  fix_e2e_coverage_xml.py  kyverno_test.py  logging.yaml  nats.dev.conf  pyproject.toml  run-backup-consumer.sh  run-backup-example-client.sh  run-backup-to-master.sh  run-e2e-tests-ucs.sh  sonar-project.properties
backends/: pyproject.toml
backends/tests/: conftest.py  test_nats_kv.py  test_nats_mq.py  test_nats_mq_migration.py
backup_consumer/: pyproject.toml
common/: pyproject.toml
common/tests/: test_log.py  test_messages.py
consumer/: pyproject.toml
consumer/common/: pyproject.toml
consumer/common/tests/: test_log.py  test_subscription.py
consumer/tests/: test_client_config.py  test_debug_msg_performance.py  test_prov_lib_message_handler.py
consumer_example/: pyproject.toml
dispatcher/: pyproject.toml
dispatcher/tests/: test_dispatcher.py  test_dispatcher_service.py
e2e_tests/: README.md  e2e_settings.json.example  e2e_settings_ucs.json  pyproject.toml
e2e_tests/tests/: conftest.py  e2e_settings.py  mock_data.py  test_acknowledge_message.py  test_api_performance.py  test_consumer_client.py  test_consumer_client_callback.py  test_nats_message_queue_adapter.py  test_transformer_cache_miss.py  test_udm_rest_api.py  test_workflow.py  test_zzz_api_performance.py
listener/: pyproject.toml
listener/debian/: changelog  control  copyright  rules  univention-provisioning-listener.install
listener/src/: ldap_listener.py  nubus-provisioning.py
listener/tests/: deactivated_test_ldap_listener.py  test_ldap_listener.py
prefill/: pyproject.toml
prefill/tests/: test_udm_prefill.py  test_udm_prefill_retry.py
provisioning-listener/: pyproject.toml
provisioning-listener/provisioning_listener/: ldap_listener.py  port.py  service.py
rest-api/: pyproject.toml
rest-api/tests/: test_message_service.py  test_passlib_bug.py  test_subscription_service.py
server/: pyproject.toml
src/: pyproject.toml
src/admin/: config.py  port.py
src/admin/api/: __init__.py
src/admin/service/: __init__.py  admin.py
src/app/: __init__.py  auth.py  config.py  main.py
src/client/: api.py  pyproject.toml  slapdsocklistener.py
src/client/example-client/: main.py
src/client/slapdsock/: main.py
src/consumer/: __init__.py  config.py  main.py  port.py
src/consumer/adapters/: nats_adapter.py  redis_adapter.py
src/consumer/messages/: main.py
src/core/: config.py
src/core/client/: __init__.py  api.py
src/core/models/: api.py  queue.py
src/dispatcher/: __init__.py  config.py  log.py  main.py  port.py
src/dispatcher/persistence/: __init__.py  messages.py  redis.py  subscriptions.py
src/dispatcher/prefill/: base.py  udm.py
src/dispatcher/service/: __init__.py  dispatcher.py  messages.py  prefill.py  subscription.py
src/dispatcher/subscription/: queue.py  sink.py
src/events/: config.py  port.py
src/events/adapters/: mq_abstract_adapter.py  mq_nats_adapter.py
src/events/api/: __init__.py
src/events/ports/: port.py
src/events/service/: __init__.py  events.py  messages.py
src/example-client/: main.py
src/internal/api/: __init__.py
src/ldap_listener/: ldap_listener.py
src/prefill/: __init__.py  base.py  config.py  main.py  port.py  udm.py
src/prefill/service/: udm_prefill.py
src/producer/: port.py
src/producer/api/: __init__.py
src/producer/service/: __init__.py  messages.py
src/provisioning/: __init__.py  main.py
src/provisioning_listener/: config.py  ldap_listener.py  port.py  service.py
src/server/: log.py
src/server/adapters/: base_adapters.py  internal_api_adapter.py  internal_api_client.py  nats_adapter.py  ports.py  udm_adapter.py
src/server/services/: messages.py  port.py  subscriptions.py
src/server/utils/: message_ack_manager.py  old_message_ack_manager.py
src/shared/: config.py  log.py
src/shared/adapters/: __init__.py  base_adapters.py  cache_db_adapter.py  consumer_mes_adapter.py  consumer_messages_adapter.py  consumer_reg_adapter.py  consumer_registration_adapter.py  event_adapter.py  internal_api_adapter.py  kv_store.py  message_queue.py  mq_abstract_adapter.py  nats_adapter.py  nats_kv_adapter.py  notification_adapter.py  redis_adapter.py  udm_adapter.py
src/shared/client/: api.py  (+2 more)
src/udm_messaging/: config.py  port.py
src/udm_transformer/: config.py  controller.py  main.py  port.py
test_queue/: README.md  pyproject.toml  run.sh
test_queue/src/: config.py  task_runner.py  test_extended_attributes.py  test_queue.py
tests/: 50-listener-base-entrypoint.envsh  __init__.py  base-defaults.conf  base.conf  conftest.py  mock_data.py  mocks.py  pyproject.toml
tests/E2E/: test_end_2_end.py
tests/e2e/: conftest.py  e2e_settings.json.example  e2e_settings.json.old  end_2_end.py  helpers.py  test_acknowledge_message.py  test_api_performance.py  test_consumer_client.py  test_consumer_client_callback.py  test_end_2_end.py  test_event_generation.py  test_nats_message_queue_adapter.py  test_workflow.py
tests/integration/: conftest.py  test_consumer_client.py  test_dispatcher_service.py  test_event_routing.py  test_messages_route.py  test_subscriptions_route.py  test_udm_event_routing.py  test_udm_messaging_service.py
tests/test_helpers/: __init__.py  mock_data.py
tests/unit/: __init__.py  deactivated_test_ldap_listener.py  test_admin_service.py  test_client_config.py  test_dispatcher_service.py  test_events_message_service.py  test_ldap_listener.py  test_message_repository.py  test_message_service.py  test_nats_adapter.py  test_prov_lib_message_handler.py  test_redis_adapter.py  test_subscription.py  test_subscription_repository.py  test_subscription_service.py  test_udm_event_listener.py  test_udm_prefill.py
udm-transformer/: pyproject.toml
udm-transformer/tests/: conftest.py  test_transformer_cache_miss.py
(+544 files in other folders)
