[tool.poetry]
name = "provisioning"
version = "0.1.0"
description = "Univention Management Stack - Provisioning Service"
authors = [
  "Univention GmbH <packages@univention.de>",
]
license = "GNU Affero General Public License v3"
readme = "README.md"
packages = [{ include = "server", from = "src" }, ]

[tool.poetry.dependencies]
aiohttp = "^3.8.5"
asgi-correlation-id = "^4.3.0"
bcrypt = "4.0.1"
cachetools = "^5.4.0"
daemoniker = "^0.2.3"
fastapi = "^0.103.1"
fastapi-utils = "^0.7.0"
httptools="^0.6.1"
jsondiff = "^2.2.0"
ldap3 = "^2.9.1"
msgpack = "1.0.*"
nats-py = "^2.7.0"
passlib = "^1.7.4"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python = "^3.11"
pyyaml = "^6.0.1"
requests = "^2.31.0"
trio = "^0.22.2"
typing-extensions = "^4.12.2"
typing-inspect = "^0.9.0"
uvicorn = "^0.21.1"

[tool.poetry.scripts]
dev = "src.server.core.app:start_dev"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.26.0"
pytest-cov = "4.1"
pytest-timeout = "2.3.1"
udm-rest-api-client = "^0.0.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]  # activate isort

[tool.ruff.lint.isort]
known-first-party = ["provisioning_listener", "server", "tests", "univention"]

[tool.pytest.ini_options]
markers = ["provisioning_lib: marks tests that test the provisioning client library",]
asyncio_mode = "auto"
log_cli = 0  # activate on the CLI with: "-o log_cli=true"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)-5s [%(module)s.%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S:%f"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
