[tool.poetry]
name = "nubus-provisioning-backends"
version = "0.1.0"
description = "Univention Nubus - Provisioning Backends"
authors = ["Univention GmbH <packages@univention.de>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "univention", from = "src" }]

[tool.poetry.dependencies]
nats-py = "^2.9.0"
# nubus-provisioning-common = {path = "../common"}
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python = "^3.11"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src/univention/provisioning/backends",
    "--cov=tests",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
log_cli = 0  # activate on the CLI with: "-o log_cli=true"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)-5s [%(module)s.%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S:%f"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
