# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[project]
name = "nubus-provisioning-backends"
version = "0.1.0"
description = "Univention Nubus - Provisioning Backends"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}
requires-python = "==3.13.*"

dependencies = [
    "nats-py<3.0.0,>=2.9.0",
]

[tool.uv.sources]
# TODO: Temporary pin to a patched nats-py fixing premature KV watcher initial
# completion (univention/dev/projects/provisioning#135). Remove once
# https://github.com/nats-io/nats.py/pull/995 is merged and released.
nats-py = { url = "https://github.com/d3vv3/nats.py/archive/f0deaeb85e2888b7175398a0b50d3a940b2692f5.tar.gz", subdirectory = "nats" }

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src/univention/provisioning/backends",
    "--cov=tests",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
log_cli = 0  # activate on the CLI with: "-o log_cli=true"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)-5s [%(module)s.%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S:%f"
