[project]
name = "provisioning-backup-consumer"
version = "0.1.0"
description = "Univention - Provisioning Backup Consumer"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.11.*"

dependencies = [
    "aiohttp<4.0.0,>=3.10.9",
    "jsondiff<3.0.0,>=2.2.1",
    "pydantic<3.0.0,>=2.9.2",
    "pydantic-settings<3.0.0,>=2.5.2",
    "nubus-provisioning-consumer>=0.1.0",
    "nats-py>=2.6,<3.0",
]

# Only necessary because these libraries are in the same git repo
[tool.uv.sources]
nubus-provisioning-consumer = { path = "../consumer" }
nubus-provisioning-common = { path = "../common" }

[project.scripts]
backup_consumer = "univention.provisioning.backup_consumer.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
