[project]
name = "nubus-provisioning-common"
version = "0.1.0"
description = "Univention Nubus - Provisioning common code"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}
requires-python = "==3.11.*"

dependencies = [
    "asgi-correlation-id<5.0.0,>=4.3.3",
    "pydantic",
]

[[tool.uv.index]]
name = "gitlab"
publish-url = "https://git.knut.univention.de/api/v4/projects/882/packages/pypi"
url = "https://git.knut.univention.de/api/v4/projects/882/packages/pypi"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src/univention/provisioning",
    "--cov=tests",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
log_cli = 0  # activate on the CLI with: "-o log_cli=true"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)-5s [%(module)s.%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S:%f"

