[project]
name = "nubus-provisioning-consumer"
version = "0.1.0"
description = "Univention Nubus - Provisioning Consumer"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "aiohttp<4.0.0,>=3.10.9",
    "jsondiff<3.0.0,>=2.2.1",
    # TODO: Update version
    "nubus-provisioning-common==0.1.0",
    "pydantic<3.0.0,>=2.9.2",
    "pydantic-settings<3.0.0,>=2.5.2",
]

[tool.uv.sources]
nubus-provisioning-backends = { path = "../backends" }
nubus-provisioning-common = { path = "../common" }

[project.scripts]
prefill = "univention.provisioning.prefill.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
