[tool.poetry]
name = "nubus-provisioning-consumer-example"
version = "0.1.0"
description = "Univention Nubus - Provisioning Consumer Example"
authors = ["Univention GmbH <packages@univention.de>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "univention", from = "src" }]

[tool.poetry.dependencies]
aiohttp = "^3.10.9"
jsondiff = "^2.2.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python = "^3.11"
nubus-provisioning-common = ">=0.1.0"
nubus-provisioning-consumer = ">=0.1.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
