[project]
name = "nubus-provisioning-consumer-example"
version = "0.1.0"
description = "Univention Nubus - Provisioning Consumer Example"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.11.*"

dependencies = [
    "aiohttp<4.0.0,>=3.10.9",
    "jsondiff<3.0.0,>=2.2.1",
    "pydantic<2",
    "nubus-provisioning-consumer>=0.1.0",
]

# Only necessary because these libraries are in the same git repo
[tool.uv.sources]
nubus-provisioning-consumer = { path = "../consumer", editable = true }
nubus-provisioning-common = { path = "../common", editable = true }

[project.scripts]
consumer_example = "univention.provisioning.consumer_example.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
