# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[project]
name = "nubus-provisioning-dispatcher"
version = "0.1.0"
description = "Univention Nubus - Provisioning Dispatcher"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.11.*"

dependencies = [
    "daemoniker<1.0.0,>=0.2.3",
    "pydantic-settings<3.0.0,>=2.5.2",
    "backends<2.0.0,>=1.6.6",
    "nubus-provisioning-backends",
    "nubus-provisioning-common",
]

[tool.uv.sources]
nubus-provisioning-backends = { path = "../backends" }
nubus-provisioning-common = { path = "../common" }

[project.scripts]
dispatcher = "univention.provisioning.dispatcher.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
