# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[project]
name = "nubus-provisioning-dispatcher"
version = "0.1.0"
description = "Univention Nubus - Provisioning Dispatcher"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.13.*"

dependencies = [
    "daemoniker<1.0.0,>=0.2.3",
    "pydantic-settings<3.0.0,>=2.5.2",
    "backends<2.0.0,>=1.6.6",
    "nats-py<3.0.0,>=2.9.0",
    "nubus-provisioning-backends",
    "nubus-provisioning-common",
]

[tool.uv.sources]
# TODO: Temporary pin to a patched nats-py fixing premature KV watcher initial
# completion (univention/dev/projects/provisioning#135). Remove once
# https://github.com/nats-io/nats.py/pull/995 is merged and released.
nats-py = { git = "https://github.com/d3vv3/nats.py", rev = "f0deaeb85e2888b7175398a0b50d3a940b2692f5", subdirectory = "nats" }
nubus-provisioning-backends = { path = "../backends" }
nubus-provisioning-common = { path = "../common" }

[project.scripts]
dispatcher = "univention.provisioning.dispatcher.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
