# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[project]
name = "nubus-provisioning-e2e-tests"
version = "0.1.0"
description = "Univention Nubus - Provisioning e2e test code"
readme = "README.md"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}
requires-python = "<4.0,>=3.13"
dependencies = [
    "ldap3<3.0.0,>=2.9.1",
    "nats-py<3.0.0,>=2.15.0",
    "nubus-provisioning-backends",
    "nubus-provisioning-consumer",
    "pytest<9.0.0,>=8.4.2",
    "pytest-asyncio<1.0,>=0.26.0",
    "pytest-cov<6.0,>=5.0.0",
    "pytest-timeout>=2.4.0",
    "requests<3.0.0,>=2.34.2",
    "udm-rest-api-client<1.0.0,>=0.1.2",
]

[tool.uv.sources]
nubus-provisioning-backends = { path = "../backends" }
nubus-provisioning-common = { path = "../common" }
nubus-provisioning-consumer = { path = "../consumer" }

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
