# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[project]
name = "nubus-provisioning-e2e-tests"
version = "0.1.0"
description = "Univention Nubus - Provisioning e2e test code"
readme = "README.md"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}
# Must match nubus-provisioning-backends (==3.13.*); the e2e-test image runs python3.13.
requires-python = "==3.13.*"
dependencies = [
    "ldap3<3.0.0,>=2.9.1",
    "nats-py<3.0.0,>=2.9.0",
    "nubus-provisioning-backends",
    "nubus-provisioning-consumer",
    "pytest<9.0.0,>=8.3.3",
    "pytest-asyncio<1.0,>=0.25",
    "pytest-cov<6.0,>=5.0",
    "pytest-timeout>=2.3.1",
    "requests<3.0.0,>=2.23.3",
    "udm-rest-api-client<1.0.0,>=0.0.2",
]

[tool.uv.sources]
# TODO: Temporary pin to a patched nats-py fixing premature KV watcher initial
# completion (univention/dev/projects/provisioning#135). Remove once
# https://github.com/nats-io/nats.py/pull/995 is merged and released.
nats-py = { url = "https://github.com/d3vv3/nats.py/archive/f0deaeb85e2888b7175398a0b50d3a940b2692f5.tar.gz", subdirectory = "nats" }
nubus-provisioning-backends = { path = "../backends" }
nubus-provisioning-common = { path = "../common" }
nubus-provisioning-consumer = { path = "../consumer" }

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
