[tool.pdm]
[tool.pdm.build]
includes = ["src/univention"]

[project]
name = "nubus-provisioning-listener"
version = "0.1.0"
description = "Nubus - Provisioning Listener (depricated in favor of LDIF Producer)"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.11.*"

dependencies = [
    "daemoniker<1.0.0,>=0.2.3",
    "msgpack<2.0.0,>=1.1.0",
    "nats-py<3.0.0,>=2.9.0",
    "nubus-provisioning-backends",
    "nubus-provisioning-common",
    "pydantic-settings<3.0.0,>=2.5.2",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
]

[tool.uv.sources]
nubus-provisioning-backends = { path = "../backends" }
nubus-provisioning-common = { path = "../common" }

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src/univention/provisioning/listener",
    "--cov=tests",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
log_cli = 0  # activate on the CLI with: "-o log_cli=true"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)-5s [%(module)s.%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S:%f"

[tool.coverage.run]
# debug = ["config", "dataio", "dataop", "lock", "multiproc", "pid", "process", "sys", "trace"]
data_file = "/coverage/listener"
relative_files = true
sigterm = true
source = ["univention.provisioning", "/usr/lib/univention-directory-listener/system/"]
