# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[tool.pdm]
[tool.pdm.build]
includes = ["src/univention"]

[project]
name = "nubus-provisioning-listener"
version = "0.1.0"
description = "Nubus - Provisioning Listener (depricated in favor of LDIF Producer)"
authors = [{ name = "Univention GmbH", email = "packages@univention.de" }]
license = { text = "AGPL-3.0-only" }

requires-python = "==3.11.*"

dependencies = [
    "daemoniker<1.0.0,>=0.2.3",
    "msgpack<2.0.0,>=1.1.0",
    "nats-py<3.0.0,>=2.9.0",
    "nats-py<3.0.0,>=2.9.0",
    "pydantic<2.0.0",
    "psutil<6.0.0,>=5.9.0"
]

[dependency-groups]
dev = ["pytest==7.4.4", "pytest-asyncio==0.21.2", "pytest-cov==4.1.0"]

[tool.uv.sources]
# TODO: Temporary pin to a patched nats-py fixing premature KV watcher initial
# completion (univention/dev/projects/provisioning#135). Remove once
# https://github.com/nats-io/nats.py/pull/995 is merged and released.
nats-py = { git = "https://github.com/d3vv3/nats.py", rev = "f0deaeb85e2888b7175398a0b50d3a940b2692f5", subdirectory = "nats" }
# nubus-provisioning-backends = { path = "../backends" }
# nubus-provisioning-common = { path = "../common" }

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src/univention/provisioning/listener",
    "--cov=tests",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
log_cli = 0 # activate on the CLI with: "-o log_cli=true"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)-5s [%(module)s.%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S:%f"
