[tool.poetry]
name = "provisioning-udm-listener"
version = "0.1.0"
description = "Nubus - Provisioning LDAP Listener"
authors = [
  "Univention GmbH <packages@univention.de>",
]
license = "GNU Affero General Public License v3"
packages = [{ include = "server", from = "src" }, ]

[tool.poetry.dependencies]
aiohttp = "^3.8.5"
bcrypt = "4.2.0"
daemoniker = "^0.2.3"
ldap3 = "^2.9.1"
msgpack = "1.1.*"
nats-py = "2.9.0"
passlib = "^1.7.4"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python = "^3.7"

[tool.poetry.scripts]
dev = "src.server.core.app:start_dev"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]  # activate isort

[tool.ruff.lint.isort]
known-first-party = ["provisioning_listener", "server", "univention"]
known-local-folder = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
