[tool.poetry]
name = "nubus-provisioning-rest-api"
version = "0.1.0"
description = "Univention Nubus - Provisioning REST API"
authors = ["Univention GmbH <packages@univention.de>"]
license = "AGPL-3.0-only"
packages = [{ include = "univention", from = "src" }]

[tool.poetry.dependencies]
asgi-correlation-id = "^4.3.3"
bcrypt = "4.2.0"
cachetools = "^5.5.0"
fastapi = {version="^0.115.0", extras=["standard"]}
fastapi-utils = "^0.7.0"
httptools = "^0.6.1"
nubus-provisioning-backends = { path = "../backends/" }
nubus-provisioning-common = { path = "../common/" }
passlib = "^1.7.4"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python = "^3.11"
typing-extensions = "^4.12.2"
typing-inspect = "^0.9.0"
backends = "^1.6.6"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
