# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[project]
name = "nubus-provisioning-rest-api"
version = "0.1.0"
description = "Univention Nubus - Provisioning REST API"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.11.*"

dependencies = [
    "asgi-correlation-id<5.0.0,>=4.3.3",
    "bcrypt==4.2.0",
    "cachetools<6.0.0,>=5.5.0",
    "fastapi[standard]<1.0.0,>=0.115.0",
    "fastapi-utils<1.0.0,>=0.7.0",
    "httptools<1.0.0,>=0.6.1",
    "nubus-provisioning-backends",
    "nubus-provisioning-common",
    "passlib<2.0.0,>=1.7.4",
    "pydantic<3.0.0,>=2.9.2",
    "pydantic-settings<3.0.0,>=2.5.2",
    "typing-extensions<5.0.0,>=4.12.2",
    "typing-inspect<1.0.0,>=0.9.0",
    "backends<2.0.0,>=1.6.6",
]

[tool.uv.sources]
nubus-provisioning-backends = { path = "../backends" }
nubus-provisioning-common = { path = "../common" }

[project.scripts]
rest-api = "univention.provisioning.rest.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

