# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[project]
name = "nubus-provisioning-rest-api"
version = "0.1.0"
description = "Univention Nubus - Provisioning REST API"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.13.*"

dependencies = [
    "asgi-correlation-id<5.0.0,>=4.3.4",
    "bcrypt==4.2.0",
    "cachetools<6.0.0,>=5.5.2",
    "fastapi[standard]<1.0.0,>=0.139.2",
    "fastapi-utils<1.0.0,>=0.8.0",
    "httptools<1.0.0,>=0.8.0",
    "nubus-provisioning-backends",
    "nubus-provisioning-common",
    "passlib<2.0.0,>=1.7.4",
    "pydantic<3.0.0,>=2.13.4",
    "pydantic-settings<3.0.0,>=2.14.2",
    "typing-extensions<5.0.0,>=4.16.0",
    "typing-inspect<1.0.0,>=0.9.0",
    "backends<2.0.0,>=1.9.0",
    "python-multipart>=0.0.32",
    "urllib3>=2.7.0",
]

[tool.uv.sources]
nubus-provisioning-backends = { path = "../backends" }
nubus-provisioning-common = { path = "../common" }

[project.scripts]
rest-api = "univention.provisioning.rest.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

