[tool.poetry]
name = "nubus-provisioning-server"
version = "0.1.0"
description = "Univention Nubus - Provisioning Server inluding the Dispatcher, Prefill, REST API, and UDM Transformer"
authors = ["Univention GmbH <packages@univention.de>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "univention", from = "src" }]

[tool.poetry.dependencies]
# backends = "^1.6.6"
# univention.admin.rest.module
# univention.admin.uldap
# univention.management.console
aiohttp = "^3.10.9"
asgi-correlation-id = "^4.3.3"
bcrypt = "4.2.0"
cachetools = "^5.5.0"
daemoniker = "^0.2.3"
fastapi = {version="^0.115.0", extras=["standard"]}
fastapi-utils = "^0.7.0"
httptools = "^0.6.1"
msgpack = "^1.1.0"
nubus-provisioning-backends = {path = "../backends"}
passlib = "^1.7.4"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python = "^3.11"
typing-extensions = "^4.12.2"
typing-inspect = "^0.9.0"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src/univention/provisioning/dispatcher",
    "--cov=tests",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
log_cli = 0  # activate on the CLI with: "-o log_cli=true"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)-5s [%(module)s.%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S:%f"

[tool.pytest_env]
ADMIN_PASSWORD = {value = "provisioning", skip_if_set = true}
ADMIN_USERNAME = {value = "admin", skip_if_set = true}
ADMIN_NATS_USER = {value = "admin", skip_if_set = true}
ADMIN_NATS_PASSWORD = {value = "nimda", skip_if_set = true}
CORS_ALL = {value = "false", skip_if_set = true}
DEBUG = {value = "false", skip_if_set = true}
EVENTS_USERNAME_UDM = {value = "udm", skip_if_set = true}
EVENTS_PASSWORD_UDM = {value = "udmpass", skip_if_set = true}
LOG_LEVEL = {value = "DEBUG", skip_if_set = true}
NATS_HOST = {value = "foo", skip_if_set = true}
NATS_PORT = {value = 1234, skip_if_set = true}
NATS_PASSWORD = {value = "apipass", skip_if_set = true}
NATS_USER = {value = "api", skip_if_set = true}
PREFILL_PASSWORD = {value = "prefillpass", skip_if_set = true}
PREFILL_USERNAME = {value = "prefill", skip_if_set = true}
ROOT_PATH = {value = "/", skip_if_set = true}

[tool.poetry.group.dev.dependencies]
nubus-provisioning-tests = {path = "../tests/"}
pytest = "^8.3.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
